FlowOS/public/styles/style.css
:root {
	--boot-bg: black;
}

*,
.winbox .wb-title {
	color: var(--text-color);
	font-family: var(--font-family);
}

.winbox .wb-header,
.winbox .wb-body {
	background: var(--window-bg);
}

html,
body {
	background: var(--desktop-bg);
	background-repeat: no-repeat;
	background-attachment: fixed;
	background-position: center;
	background-size: cover;
	overflow: hidden;
	margin: 0;
}

.app-switcher {
	display: none;
	transition: opacity 0.2s;
	position: absolute;
	top: 50%;
	left: 50%;
	z-index: 1000;
	transform: translate(-50%, -50%);
	background: var(--window-bg);
	box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
	max-width: 500px;
	width: calc(100vw - 50px);
	border-radius: 10px;
	opacity: 0;
	height: calc(100vh - 50px);
	max-height: 200px;
	overflow: hidden;
	box-sizing: border-box;
	padding: 15px;
}

.app-switcher ul {
	list-style: none;
	padding: 0;
	box-sizing: border-box;
	overflow: scroll;
	height: 100%;
}

.app-switcher li {
	display: flex;
	gap: 10px;
	padding: 15px;
	border-radius: 10px;
	align-items: center;
}

.app-switcher li:hover {
	background: var(--surface-bg);
}

.boot {
	width: 100vw;
	height: 100vh;
	background: #181926;
	background: var(--boot-bg);
	overflow: hidden;
	transition-delay: opacity 1s;
	transition: opacity 3s, background 1s;
	z-index: 10000;
	position: relative;
}

.boot main {
	position: absolute;
	top: 50%;
	left: 50%;
	transform: translate(-50%, -50%);
}

.progress-bar {
	height: 4px;
	background-color: calc(--surface-bg);
	width: 100%;
	overflow: hidden;
}

.progress-bar-value {
	width: 100%;
	height: 100%;
	background-color: var(--primary);
	animation: indeterminateAnimation 1s infinite linear;
	transform-origin: 0% 50%;
}

@keyframes indeterminateAnimation {
	0% {
		transform: translateX(0) scaleX(0);
	}
	40% {
		transform: translateX(0) scaleX(0.4);
	}
	100% {
		transform: translateX(100%) scaleX(0.5);
	}
}

.bar {
	padding: 10px;
	width: calc(100vw - 20px);
	z-index: 500;
	position: absolute;
	top: 0;
	left: 0;
	display: flex;
	gap: 5px;
	opacity: 0.75;
	flex-direction: row-reverse;
	justify-content: center;
	transition: opacity 0.2s;
	user-select: none;
	pointer-events: none;
}

.bar:hover {
	opacity: 1;
}

.bar-item {
	pointer-events: all;
	padding: 5px;
	background: var(--bar-bg);
	display: inline-block;
	border-radius: 5px;
}

/* Hide scrollbar for Chrome, Safari and Opera */
*::-webkit-scrollbar {
	display: none;
}
  
  /* Hide scrollbar for IE, Edge and Firefox */
* {
	-ms-overflow-style: none;  /* IE and Edge */
	scrollbar-width: none;  /* Firefox */
  }

.searchbar {
	padding: 5px 10px;
	border: none;
	background: var(--surface-bg);
	border-radius: 5px;
	width: calc(100% - 20px);
	margin: 5px 0;
	font-family: var(--font-family);
}

